# yugi

./: .gitignore  CMakeLists.txt  README.md  oh
headers/: colors.h  installer.h  unit.h
sources/: colors.c  installer.c  unit.c
specs/colors/: colors_specs.c
specs/install/: get_file_specs.c  yugi_install_specs.c
specs/unit/: pythagore_specs.c  thales_specs.c  unit_specs.c
